--- a/index.html
+++ b/index.html
@@ -7,7 +7,71 @@
     <title>Weather App</title>
   </head>
   <body>
-    <section class="weather-app" id="weatherApp"></section>
+    <section class="weather-app">
+      <h1 class="current-temperature">20 °C</h1>
+      <p class="city">Stockholm</p>
+      <p class="time">Time: 15:52</p>
+      <p class="description">
+        Clear Sky <img src="design/design1/assets/Group16.png" alt="Weather Icon" />
+      </p>
+      <p class="wind-speed">Wind Speed 3.15 m/s</p>
+      <p class="sunrise-sunset">
+        Sunrise 06:43 &nbsp;&nbsp; Sunset 17:58
+      </p>
+      <h2>5 Day Forecast</h2>
+      <ul class="forecast-list">
+        <li>
+          <div class="forecast-item">
+            <p>20°C</p>
+            <p>Stockholm</p>
+            <p>Time: 15:52</p>
+            <p>Clear Sky <img src="design/design1/assets/Group16.png" alt="Weather Icon" /></p>
+            <p>Wind Speed 3.15 m/s</p>
+            <p>Sunrise 06:43 &nbsp;&nbsp; Sunset 17:58</p>
+          </div>
+        </li>
+        <li>
+          <div class="forecast-item">
+            <p>21°C</p>
+            <p>Stockholm</p>
+            <p>Time: 15:52</p>
+            <p>Clear Sky <img src="design/design1/assets/Group16.png" alt="Weather Icon" /></p>
+            <p>Wind Speed 3.15 m/s</p>
+            <p>Sunrise 06:43 &nbsp;&nbsp; Sunset 17:58</p>
+          </div>
+        </li>
+        <li>
+          <div class="forecast-item">
+            <p>22°C</p>
+            <p>Stockholm</p>
+            <p>Time: 15:52</p>
+            <p>Clear Sky <img src="design/design1/assets/Group16.png" alt="Weather Icon" /></p>
+            <p>Wind Speed 3.15 m/s</p>
+            <p>Sunrise 06:43 &nbsp;&nbsp; Sunset 17:58</p>
+          </div>
+        </li>
+        <li>
+          <div class="forecast-item">
+            <p>14°C</p>
+            <p>Stockholm</p>
+            <p>Time: 15:52</p>
+            <p>Clear Sky <img src="design/design1/assets/Group16.png" alt="Weather Icon" /></p>
+            <p>Wind Speed 3.15 m/s</p>
+            <p>Sunrise 06:43 &nbsp;&nbsp; Sunset 17:58</p>
+          </div>
+        </li>
+        <li>
+          <div class="forecast-item">
+            <p>16°C</p>
+            <p>Stockholm</p>
+            <p>Time: 15:52</p>
+            <p>Clear Sky <img src="design/design1/assets/Group16.png" alt="Weather Icon" /></p>
+            <p>Wind Speed 3.15 m/s</p>
+            <p>Sunrise 06:43 &nbsp;&nbsp; Sunset 17:58</p>
+          </div>
+        </li>
+      </ul>
+    </section>
   </body>
   <script src="./script.js"></script>
 </html>
